css/style.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Montserrat;
  font-size: 16px;
  font-weight: 400;
  line-height: 22px;
  color: #fff;
}

html,
body {
  height: 100%;
}

.container {
  min-height: 100%;
  display: flex;
  flex-direction: column;
  background-image: url("../img/main.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  position: relative;
}

.header-overlay {
  position: absolute;
  left: 0;
  top: 0;
  background: linear-gradient(180deg, rgb(0, 0, 0), rgba(0, 0, 0, 0) 100%);
  opacity: 0.7;
  width: 100%;
  height: 150px;
}

.header {
  margin: 30px 30px 0 30px;
  display: flex;
  justify-content: space-between;
  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
  position: relative;
  z-index: 11;
}

.seo-title {
  display: none;
}

.header-title {
  width: 290px;
  border-right: 1px solid rgba(255, 255, 255, 0.25);
}

.header-title__item {
  max-width: 270px;
}

.header-menu {
  display: flex;
  align-items: center;
}

.header-menu-link {
  display: flex;
  justify-content: space-around;
  width: 105px;
  border-left: 1px solid rgba(255, 255, 255, 0.25);
  border-right: 1px solid rgba(255, 255, 255, 0.25);
}

.header-menu-link svg path {
  fill: #fff;
  transition-duration: 300ms;
}

.menu-link__circle {
  width: 25px;
  height: 25px;
  border-radius: 50%;
  border: 1px solid #fff;
  position: relative;
  cursor: pointer;
  transition-duration: 300ms;
}

.menu-link__telegram {
  position: absolute;
  top: 6px;
  left: 3px;
  cursor: pointer;
  transition-duration: 300ms;
}

.menu-link__whatsapp {
  cursor: pointer;
  transition-duration: 300ms;
}

.header-menu-number {
  margin-left: 14px;
}

.menu-number__item {
  cursor: pointer;
  padding: 5px;
  text-decoration: none;
  position: relative;
  transition-duration: 1s;
}

.menu-number__item_hiden {
  transition-duration: 1s;
  opacity: 1;
}

.menu-number__item_open {
  position: absolute;
  left: 70px;
  opacity: 0;
}

.main {
  flex: 1 1 auto;
  position: relative;
  z-index: 10;
}

.main-place {
  display: inline-flex;
  align-items: center;
  gap: 11px;
  height: 25px;
}

.main-place-description {
  width: 20px;
  height: 19px;
  background-color: #fff;
  margin-left: 4px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.description__item {
  color: #000;
  font-size: 12px;
  font-weight: 600;
  line-height: 15px;
}

.main-place__text {
  font-size: 14.29px;
  font-weight: 500;
  line-height: 17px;
  margin-right: 5px;
}

.apartments {
  position: absolute;
  top: 12%;
  left: 45%;
}

.park {
  position: absolute;
  top: 65%;
  left: 38%;
}

.mansions {
  position: absolute;
  top: 70%;
  left: 17%;
}

.road {
  position: absolute;
  top: 85%;
  left: 75%;
}

.button {
  cursor: pointer;
  background: linear-gradient(
    135deg,
    rgba(109, 109, 109, 0.1) 50%,
    rgba(0, 0, 0, 1) 0%
  );

  background-color: #000;
  transition-duration: 1s;
  border: 1px solid #ffffff50;
}

.footer {
  position: relative;
  z-index: 10;
}

.footer-overlay {
  background: linear-gradient(0deg, rgb(0, 0, 0), rgba(0, 0, 0, 0) 100%);
  opacity: 0.8;
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 150px;
}

.footer-download {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 15px;
  width: 310px;
  height: 44px;
  text-transform: uppercase;
  margin: 0 0 45px 80px;
}

.footer-download__text {
  line-height: 20px;
}

.footer-download__item {
  padding: 6px;
  box-sizing: content-box;
}

.modal {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 100;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  backdrop-filter: blur(20px);
  background: rgba(0, 0, 0, 0.5);
  visibility: hidden;
  opacity: 0;
  transition-duration: 500ms;
  overflow: scroll;
}

.modal._active {
  visibility: visible;
  opacity: 1;
}

.modal-content {
  max-width: 914px;
  height: 440px;
  display: flex;
  position: relative;
}

.modal__close-btn {
  position: absolute;
  top: -22px;
  right: -35px;
  cursor: pointer;
  padding: 20px;
  transition-duration: 1s;
}

.modal__close-btn::before {
  content: "";
  position: absolute;
  right: 10px;
  width: 20px;
  height: 2px;
  background-color: #fff;
  transform: rotate(45deg);
}

.modal__close-btn::after {
  content: "";
  position: absolute;
  right: 10px;
  width: 20px;
  height: 2px;
  background-color: #fff;
  transform: rotate(-45deg);
}

.modal-content-description {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 30px;
  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
    url(../img/modal.png);
  background-repeat: no-repeat;
  background-size: 920px;
  background-position: -321px;
  max-width: 457px;
}

.modal__title {
  text-align: center;
  text-transform: capitalize;
  font-family: "Times New Roman", Times, serif;
  font-weight: 400;
  font-style: italic;
  font-size: 45px;
  line-height: 100%;
  width: 402px;
}

.modal__text {
  width: 383px;
  text-align: center;
  line-height: 150%;
}

.modal-link {
  display: flex;
  gap: 30px;
  justify-content: center;
  align-items: center;
}

.modal-link-telegram,
.modal-link-whatsapp {
  display: flex;
  gap: 10px;
  justify-content: center;
  align-items: center;
}

.modal-link-telegram-btn,
.modal-link-whatsapp-btn {
  text-decoration: none;
  cursor: pointer;
}

.modal-link-telegram .menu-link__circle {
  border-color: #ada08c;
}

.modal-link-telegram__text,
.modal-link-whatsapp__text {
  position: relative;
}

.modal-link-telegram__text::after,
.modal-link-whatsapp__text::after,
.menu-number__item::after {
  content: "";
  position: absolute;
  width: 0;
  height: 1px;
  bottom: 0;
  left: 0;
  right: 0;
  margin: 0 auto;
  background-color: #fff;
  transition-duration: 300ms;
  transition-timing-function: linear;
}

.modal-content-form-wrapper {
  box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.5);
  background: rgb(0, 0, 0);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.modal-content-form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 427px;
}

.form-data {
  border: none;
  border-bottom: 1px solid rgb(145, 145, 145);
  background-color: #000;
  height: 35px;
  margin-bottom: 44px;
  width: 397px;
  color: #fff;
  transition-duration: 300ms;
}

.form-data::placeholder {
  color: #fff;
  font-size: 18px;
}

.form-data:nth-child(6) {
  margin-bottom: 30px;
}

.form-data-submit {
  width: 397px;
  height: 50px;
  color: #000;
  text-transform: uppercase;
  transition-duration: 300ms;
  cursor: pointer;
  background-color: #fff;
  border: none;
}

.modal-sphere-content {
  position: relative;
}

.viewer {
  width: 80vw;
  height: 80vh;
  display: none;
}

@media (hover: hover) {
  .menu-link__circle:hover {
    border: 1px solid rgb(173, 160, 140);
  }

  .menu-link__circle:hover .menu-link__telegram path {
    fill: rgb(173, 160, 140);
  }

  .menu-link__whatsapp:hover path {
    fill: rgb(173, 160, 140);
  }

  .button:hover {
    background-position: 310px 0;
    border: 1px solid #ffffff;
  }

  .modal__close-btn:hover {
    transform: scale(1.5) rotate(360deg);
  }

  .modal-link-telegram-btn:hover .modal-link-telegram__text::after,
  .modal-link-whatsapp-btn:hover .modal-link-whatsapp__text::after,
  .header-menu-number:hover .menu-number__item:hover::after {
    width: 100%;
  }

  .form-data-submit:hover {
    background-color: #bdbcbc;
  }
}

@media (max-width: 900px) {
  .apartments {
    top: 25%;
    left: 45%;
  }

  .modal-content {
    flex-direction: column;
    height: auto;
  }

  .modal__title,
  .modal-content-form {
    margin-top: 30px;
  }

  .modal-link,
  .form-data-submit {
    margin-bottom: 30px;
  }
}

@media (max-width: 768px) {
  .header-burger-btn {
    width: 32px;
    height: 32px;
    border-radius: 50%;
    border: 1px solid #fff;
    position: relative;
    z-index: 21;
  }

  .header-burger-btn::before,
  .header-burger-btn::after {
    content: "";
    position: absolute;
    width: 16px;
    height: 1px;
    background-color: #fff;
    transition-duration: 300ms;
  }

  .header-burger-btn::before {
    top: 12px;
    left: 7px;
  }

  .header-burger-btn._active::before {
    transform: rotate(45deg);
    top: 15px;
    left: 7px;
  }

  .header-burger-btn::after {
    bottom: 12px;
    left: 7px;
  }

  .header-burger-btn._active::after {
    transform: rotate(-45deg);
    bottom: 14px;
    left: 8px;
  }

  .header-menu {
    position: absolute;
    top: -100vh;
    right: 0;
    height: 80px;
    backdrop-filter: brightness(0.2);
    flex-direction: column-reverse;
    gap: 5px;
    transition-duration: 800ms;
    transition-timing-function: ease-in-out;
    z-index: 20;
  }

  .header-menu-number {
    margin-left: 0;
  }

  .header-menu._active {
    top: 42px;
  }

  .park {
    top: 59%;
    left: 34%;
  }

  .mansions {
    top: 67%;
    left: 5%;
  }

  .road {
    top: 85%;
    left: 75%;
  }

  .footer-download {
    max-width: 230px;
  }

  .footer-download__text {
    font-size: 11px;
  }
}

@media (max-width: 500px) {
  .header-title {
    width: 250px;
  }

  .header-title__item {
    width: 240px;
  }

  .modal-content {
    justify-content: center;
    align-items: center;
    width: 350px;
  }

  .modal-content > .modal__close-btn {
    top: -7px;
    right: 0px;
  }

  .modal-content-description {
    width: 340px;
  }

  .modal__title {
    font-size: 30px;
    width: auto;
  }

  .modal__text {
    width: auto;
    padding: 0 5px;
  }

  .modal-content-form-wrapper {
    width: 340px;
  }

  .modal-content-form {
    width: 340px;
  }

  .form-data {
    width: 100%;
    padding: 0 5px;
  }

  .form-data-submit {
    width: 100%;
  }
}

@media (min-height: 850px) {
  .apartments {
    top: 28%;
  }

  .park {
    top: 55%;
  }
}

